双端队列数据结构

--- a/enqueue/makefile
+++ b/enqueue/makefile
@@ -1,12 +1,15 @@
 run : build
-./
+	./main
 
 build : main.o enqueue.o
-	gcc -o run main.o  
+	gcc main.o enqueue.o -o main     
 
-main.o : test_enqueue.o
-	gcc  
+main.o : test_enqueue.c
+	gcc -c test_enqueue.c -o main.o 
 
-enqueue.o : enqueue.h
+enqueue.o : enqueue.c enqueue.h
 	gcc -c enqueue.c -o enqueue.o
+
+clean : 
+	rm *.o main
 
